fixing bug on trailer load blurry img, only loading iframe when season open

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -311,13 +311,6 @@ img {
 
 
 
-/* .detail-title {
-    margin-top: 20%;
-    width: 100%;
-} */
-
-
-
 .outer-trailer {
     padding-top: 1rem;
 }
@@ -326,12 +319,13 @@ img {
     display: flex; 
     flex-wrap: wrap; 
     justify-content: center;
-    /* gap: 1px; */
+    gap: 0.5rem;
     padding-top: 0.6rem; 
-    padding-bottom: 0rem; 
+    padding-bottom: 0.6rem; 
     background-color:rgb(131, 125, 125);
     border-radius: 0.5em;
-
+    box-sizing: border-box;
+    width: 100%;
 }
 
 
@@ -342,7 +336,7 @@ img {
 .trailer-wrapper {
     /* Need to configure a good ratio depending on screen size */
     max-width: 560px;
-    min-width: 300px;
+    min-width: 280px;
     min-height: 200px;
     max-height: 373px;
     /* max-height: 200px; */
@@ -354,6 +348,7 @@ img {
 .trailer-wrapper iframe {
     width: 100%;
     height: 100%;
+    border-radius: 0.3em;
 }
 
 
@@ -379,7 +374,7 @@ img {
         width: 100%;
     }
     .detail-title {
-        padding: 22% 0 0rem 0;
+        padding: 22% 0 0 0;
     }
 
     .movie-info-1 {
@@ -631,7 +626,7 @@ img {
 .trailer-episode-data {
     padding: 10px;
     border-top: 3px solid black;
-    border-bottom: 3px solid black;
+    /* border-bottom: 3px solid black; */
     margin-bottom: 10px;
 }
 
